--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,7 +16,7 @@
 	<!-- qq-share -->
 	<meta itemprop="name" content="FFXIV - CanisMinor ActSkin">
 	<meta itemprop="description" content="Final Fantasy XIV - CanisMinor ActSkin">
-	<meta itemprop="image" content="/favicons/apple-touch-icon.png">
+	<meta itemprop="image" content="favicons/apple-touch-icon.png">
 	<!-- ios-config -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-touch-fullscreen" content="yes">
@@ -24,11 +24,11 @@
 	<meta name="apple-mobile-web-app-title" content="FFXIV - CanisMinor ActSkin">
 	<meta name="application-name" content="FFXIV - CanisMinor ActSkin">
 	<!-- favicon -->
-	<link rel="manifest" href="/manifest.json">
-	<link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
-	<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#333333">
+	<link rel="manifest" href="manifest.json">
+	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+	<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#333333">
 	<meta name="theme-color" content="#ffffff">
 	<% if (process.env.NODE_ENV === 'production') { %>
 	<!-- Start Single Page Apps for GitHub Pages -->
